--- a/public/index.html
+++ b/public/index.html
@@ -19,56 +19,10 @@
   <div class="nav-bar"></div>
 
   <div id="app">
-    <div class='product'>
-
-      <div class="product-image">
-        <img v-bind:src="image" v-bind:alt="altText">
-      </div>
-
-      <div class="product-info">
-        <h1>{{ title }}</h1>
-        <p>{{ onSaleMsg }}</p>
-
-        <div>
-          <!-- <p v-if="inventory > 10">In Stock</p>
-          <p v-else-if="inventory <= 10 && inventory > 0">Order Soon</p>
-          <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
-          <p v-show="inventory > 0">Order</p>
-          <p v-if="inStock">Instock Indicator</p> -->
-          <p v-if="inStock">In Stock</p>
-          <!-- variantQuantity of 0 is falsey, so !inStock is true -->
-          <!-- the : !inStock seems to be redundant and optional -->
-          <p v-else :class="{ outOfStock: !inStock}">Out of Stock</p>
-          <p>Shipping: {{ shipping }}</p>  
-
-          <ul>
-            <li v-for="(detail, index) in details" :key="index">{{ index + 1 }}. {{ detail }} </li>
-          </ul>
-
-          <div>Variants</div>
-          <div class="color-box" v-for="(variant, index) in variants" :key="variant.variantId"
-          :style="{ backgroundColor: variant.variantColor }" @mouseover="updateProduct(index)">
-          <!-- <div class="color-box" v-for="variant in variants" :key="variant.variantId"
-            :style="{ backgroundColor: variant.variantColor }" @mouseover="updateProduct(variant.variantImage)"> -->
-            <!-- {{ variant.variantColor}} -->
-            <!-- <ul> -->
-            <!-- <li @mouseover="updateProduct(variant.variantImage)"> {{ variant.variantColor}}</li> -->
-            <!-- <li> {{ variant.variantColor}}</li> -->
-            <!-- </ul> -->
-          </div>
-
-          <div class="cart">
-            <!-- sets the button to disabled do it won't work, also have to change colorby setting to a CSS class attribute -->
-            <button v-on:click="addToCart" :disabled="!inStock" :class="{ disabledButton: !inStock }">Add to Cart</button>
-            <button v-on:click="removeFromCart">Remove From Cart</button>
-            <p>Cart {{ cart }}</p>
-          </div>
-
-        </div>
-      </div>
-
-
+    <div class="cart">
+      <p>Cart {{ cart.length }}</p>
     </div>
+    <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeFromCart"></product>
   </div>
   <!-- built files will be auto injected -->
   <script src="https://unpkg.com/vue"></script>
